[gd_scene load_steps=28 format=2]

[ext_resource path="res://Sprites/Borders/bg_border_truelab.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Sprites/RoomTesting/1bg_border_ruins.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Sprites/RoomTesting/2bg_border_ruins.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=4]
[ext_resource path="res://Scripts/TitleBar.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Logos/UTOL.png" type="Texture" id=6]
[ext_resource path="res://Scripts/HoverBarButton.tres" type="StyleBox" id=7]
[ext_resource path="res://Scripts/PressedBarButton.tres" type="StyleBox" id=8]
[ext_resource path="res://SFX/saving.ogg" type="AudioStream" id=9]
[ext_resource path="res://SFX/select.wav" type="AudioStream" id=10]
[ext_resource path="res://SFX/click.wav" type="AudioStream" id=11]
[ext_resource path="res://Sprites/Characters/AnnoyingDog/dog.png" type="Texture" id=12]
[ext_resource path="res://Audios/mus_options_fall.ogg" type="AudioStream" id=13]

[sub_resource type="DynamicFontData" id=1]
resource_local_to_scene = true
font_path = "res://Fonts/ttf/determinationmonoweb-webfont.ttf"

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": false,
"name": "Normal",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "3",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "2",
"speed": 0.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "1",
"speed": 0.0
} ]

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFontData" id=9]
resource_local_to_scene = true
antialiased = false
font_path = "res://Fonts/ttf/determinationmonoweb-webfont.ttf"

[sub_resource type="DynamicFont" id=10]
resource_local_to_scene = true
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 9 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.180392, 0.180392, 0.360784, 0 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://Fonts/ttf/arial.ttf"

[sub_resource type="DynamicFont" id=14]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 13 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
margin_top = 64.0
margin_right = 960.0
margin_bottom = 488.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CV" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -212.0
margin_right = 480.0
margin_bottom = -179.0
custom_fonts/font = SubResource( 2 )
text = "Controls Visibility: 50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControllingType" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -148.0
margin_right = 480.0
margin_bottom = -108.0
custom_fonts/font = SubResource( 2 )
text = "Controlling Type: D-PAD"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EMPTY" type="Label" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -212.0
margin_right = 480.0
margin_bottom = -172.0
custom_fonts/font = SubResource( 2 )
text = "Oh wow, There's nothing here :)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reset" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -103.0
margin_right = 480.0
margin_bottom = -70.0
custom_fonts/font = SubResource( 2 )
text = "RESET TO DEFAULT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBack" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -40.0
margin_right = 480.0
margin_bottom = -7.0
custom_fonts/font = SubResource( 2 )
text = "Go Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Apply" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -480.0
margin_top = 20.0
margin_right = 480.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 3 )
text = "Close the game for the changes to Apply"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Apply"]
anims/FadeIn = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 10 )
volume_db = 10.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = 10.0

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = 1.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.18

[node name="Dog" type="AnimatedSprite" parent="."]
position = Vector2( 248, 496 )
frames = SubResource( 5 )
animation = "Normal"

[node name="BGMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
autoplay = true
attenuation = 0.554785

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 160.0
margin_top = 30.0
margin_right = 800.0
margin_bottom = 509.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
autoplay = "FadeIn"
anims/FadeIn = SubResource( 7 )
anims/FadeOut = SubResource( 8 )

[node name="TitleBar" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 24.0
mouse_filter = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UTOL" type="Sprite" parent="TitleBar"]
position = Vector2( 12, 13 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="TitleBar"]
margin_left = 24.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 10 )
text = "Undertale Online"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 912.0
margin_right = 960.0
margin_bottom = 24.0
mouse_filter = 1
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 14 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinimizeButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 864.0
margin_right = 912.0
margin_bottom = 24.0
mouse_filter = 1
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 14 )
text = "âˆ’"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="gui_input" from="TitleBar" to="TitleBar" method="_on_TitleBar_gui_input"]
[connection signal="pressed" from="ExitButton" to="TitleBar" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="MinimizeButton" to="TitleBar" method="_on_MinimizeButton_pressed"]
